--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,7 +3,7 @@ when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
 
 == NOTES TO LATER ==
-correct sorting in coming and old activities events
+add link to activity event
 translation checkout the entire system
 ---
 might be able to use <dl class="dl-horizontal"> in some lists
