--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,7 +3,7 @@ when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
 
 == NOTES TO LATER ==
-need a way to tell who is logged in
+need a way to tell current user logged in
 homepage should redirect to a localized page
 consider to give role to all with subscription to make it quick to select if player is active
 create overall ranking:
@@ -11,7 +11,6 @@ create overall ranking:
     - played match 5 xp
     - lost match -5 xp
 add images to blog
-view recent matches from players that you have played within the last few months
 see if there is a easier way to print page headers, stupid to print the html on all pages
 integrate twitter as well
 build a league system, with both single and doubles
