Added autofocus on login.

--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -2572,6 +2572,11 @@
           <source>Profile</source>
           <target>Profil</target>
       </trans-unit>
+      <trans-unit id="682">
+          <source>New article</source>
+          <target>Opret artikel</target>
+      </trans-unit>
+
     </body>
   </file>
 </xliff>
