--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,6 +3,7 @@ when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
 
 == NOTES TO LATER ==
+import and export keys for system in ATK
 integrate twitter as well
 merge users
 delete users
