--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,8 +1,10 @@
 when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
+remove temporary sql file
 
 == NOTES TO LATER ==
+the configuration does not work
 consider to remove the subscriptions menu item on /user
 personal ical files, with secret hash that should be able to regenerate
 import and export keys for system in ATK
