--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -2,6 +2,7 @@ when upgrading, remember to enable all products
 when upgrading, set last_login_time to when they bought last subscription
 when upgrading, set last_subscribe date to start_date
 remove temporary sql file
+on nibe, rename ticker to announcements
 
 == NOTES TO LATER ==
 create controller to convert old booking plan to new
