--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,6 +1,7 @@
 on nibe, rename ticker to announcements
 
 == NOTES TO LATER ==
+create unique key on event attends
 validate that we have activated mod_rewrite
 add notes to some documentation on lockout
 give warning if you try to make a booking plan above a booking
