--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -9,6 +9,8 @@ add exceptions to team
 add ics format for team handling
 check phpscheduleit for interval update
 check opencart for better shop experience
+check conventus to better booking system
+check tidyclub for better user system
 import and export keys for system in ATK
 integrate twitter as well
 merge users
